--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 </div>	
 
 
-
-<section class="container text-center my-5" style="background-color: #0056b3; color: #ffffff;">
-    <h2 style="color: #f00eb7;">Nuestros Dispositivos Disponibles</h2>
-    <table class="table table-hover" style="background-color: #161718; color: #ffffff;">
+<!-- tabla -->
+<section class="container text-center my-5" >
+    <h2 style="color: #f00eb7;">Nuestros Dispositivos Disponibles</h2><br>
+    <table class="table table-hover" style="background-color: #0d0d0e; color: #ffffff;">
         <thead style="background-color: #6da3da; color: #f8f9fa;">
             <tr>
                 <th>Dispositivo</th>
@@ -305,14 +305,15 @@
 <div class="separator"></div>
 
  <!-- Address -->
- <address>
-	<br><br><br><strong>Domotica Dallos</strong><br>
-	Colombia, Calle 16 # 15 - 12<br>
-	Bogota, Colombia<br>
-	<abbr title="Phone">Contacto:</abbr> +57  01 234 567
-  </address>
-  
-
+ <div class="d-flex justify-content-center align-items-center" style="height: 200px; text-align: center;">
+    <!-- Address -->
+    <address>
+        <strong>Domotica Dallos</strong><br>
+        Colombia, Calle 16 # 15 - 12<br>
+        Bogotá, Colombia<br>
+        <abbr title="Phone">Contacto:</abbr> +57 01 234 567
+    </address>
+</div>
 
 </body>
 </html>
